--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -5,125 +5,133 @@
     tools:context="com.sapicons.deepak.k2psap.Fragments.PostFragment">
 
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <android.support.v4.view.ViewPager
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="200dp">
+
+                <android.support.v4.view.ViewPager
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_margin="16dp"
+                    android:id="@+id/post_preview_images_viewpager"/>
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_centerInParent="true"
+                    android:src="@mipmap/ic_add_post"
+                    android:id="@+id/post_empty_view_pager_iv"/>
+            </RelativeLayout>
+
+
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:id="@+id/post_preview_images_viewpager">
-
-            </android.support.v4.view.ViewPager>
-
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:orientation="vertical">
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="8dp">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:layout_marginBottom="8dp">
-
-                        <ImageButton
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:layout_marginRight="4dp"
-                            android:id="@+id/post_image_one_ib"
-                            android:src="@mipmap/ic_add_photo_white"/>
-                        <ImageButton
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:layout_marginRight="4dp"
-                            android:id="@+id/post_image_two_ib"
-                            android:src="@mipmap/ic_add_photo_white" />
-                        <ImageButton
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:layout_marginRight="4dp"
-                            android:id="@+id/post_image_three_ib"
-                            android:src="@mipmap/ic_add_photo_white" />
-                        <ImageButton
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:layout_marginRight="4dp"
-                            android:id="@+id/post_image_four_ib"
-                            android:src="@mipmap/ic_add_photo_white" />
-                        <ImageButton
-                            android:layout_width="40dp"
-                            android:layout_height="40dp"
-                            android:layout_marginRight="4dp"
-                            android:id="@+id/post_image_five_ib"
-                            android:src="@mipmap/ic_add_photo_white" />
-
-                    </LinearLayout>
-
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <EditText
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:id="@+id/post_title_et"
-                            android:textSize="14sp"
-                            android:hint="Ad Title"/>
-                    </android.support.design.widget.TextInputLayout>
-
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <EditText
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:id="@+id/post_description_et"
-                            android:textSize="14sp"
-                            android:hint="Description"/>
-                    </android.support.design.widget.TextInputLayout>
-
-                    <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <EditText
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:id="@+id/post_price_et"
-                            android:textSize="14sp"
-                            android:hint="Price"/>
-                    </android.support.design.widget.TextInputLayout>
-
-
-                    <Spinner
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:id="@+id/post_category_spinner" />
-
-                    <android.support.v7.widget.SwitchCompat
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Share Phone Number "
-                        android:id="@+id/post_share_phone_switch"/>
-
+                    <ImageButton
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginRight="4dp"
+                        android:id="@+id/post_image_one_ib"
+                        android:src="@mipmap/ic_add_photo_white"/>
+                    <ImageButton
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginRight="4dp"
+                        android:id="@+id/post_image_two_ib"
+                        android:src="@mipmap/ic_add_photo_white" />
+                    <ImageButton
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginRight="4dp"
+                        android:id="@+id/post_image_three_ib"
+                        android:src="@mipmap/ic_add_photo_white" />
+                    <ImageButton
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginRight="4dp"
+                        android:id="@+id/post_image_four_ib"
+                        android:src="@mipmap/ic_add_photo_white" />
+                    <ImageButton
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginRight="4dp"
+                        android:id="@+id/post_image_five_ib"
+                        android:src="@mipmap/ic_add_photo_white" />
 
                 </LinearLayout>
-            </ScrollView>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/post_title_et"
+                        android:textSize="14sp"
+                        android:hint="Ad Title"/>
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/post_description_et"
+                        android:textSize="14sp"
+                        android:hint="Description"/>
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/post_price_et"
+                        android:textSize="14sp"
+                        android:hint="Price"/>
+                </android.support.design.widget.TextInputLayout>
 
 
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:id="@+id/post_category_spinner" />
 
+                <android.support.v7.widget.SwitchCompat
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Share Phone Number "
+                    android:id="@+id/post_share_phone_switch"/>
+
+
+            </LinearLayout>
 
         </LinearLayout>
+    </ScrollView>
+
 
 
     <android.support.design.widget.FloatingActionButton
@@ -133,6 +141,7 @@
         android:layout_marginBottom="16dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:visibility="gone"
         android:id="@+id/post_done_fab"
         android:src="@mipmap/ic_done"/>
 
