--- a/app/src/main/res/layout/activity_ad_preview.xml
+++ b/app/src/main/res/layout/activity_ad_preview.xml
@@ -1,9 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     tools:context="com.sapicons.deepak.k2psap.Activities.AdPreviewActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="250dp">
+
+                <android.support.v4.view.ViewPager
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="16dp"
+                    android:id="@+id/ad_preview_images_viewpager"/>
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_centerInParent="true"
+                    android:src="@mipmap/ic_add_post"
+                    android:id="@+id/ad_preview_empty_view_pager_iv"/>
+            </RelativeLayout>
+
+             <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="16dp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:textSize="16sp"
+                    android:textColor="#000000"
+                    android:text="Nexus 5 "
+                    android:id="@+id/ad_preview_title_tv"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.5"
+                    android:textAlignment="textEnd"
+                    android:textSize="14sp"
+                    android:textColor="#000000"
+                    android:text="Sept 30"
+                    android:id="@+id/ad_preview_posted_on_tv"/>
+            </LinearLayout>
+
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:textSize="14sp"
+                android:text="Nexus 5 Nexus 5 oijodfsjas  ouuwodksmoiasdfmsafd oijmfdlksdks "
+                android:id="@+id/ad_preview_description_tv"/>
+
+
+                 <TextView
+                     android:layout_width="match_parent"
+                     android:layout_height="wrap_content"
+                     android:layout_marginBottom="16dp"
+                     android:textAlignment="textEnd"
+                     android:id="@+id/ad_preview_category_tv"
+                     android:text="Phones and Tablets"/>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="16dp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:textSize="20sp"
+                    android:textColor="#0d47a1"
+                    android:text="Nexus 5 "
+                    android:id="@+id/ad_preview_price_tv"/>
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.5"
+                    android:textAlignment="textEnd"
+                    android:textSize="14sp"
+                    android:text="2.3 km away"
+                    android:id="@+id/ad_preview_distance_tv"/>
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_margin="16dp">
+
+                <mehdi.sakout.fancybuttons.FancyButton
+                    android:layout_width="110dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="32dp"
+                    android:id="@+id/ad_preview_call_btn"
+                    fancy:fb_text="Call"
+                    fancy:fb_textColor="#000000"
+                    fancy:fb_radius="10dp"
+                    fancy:fb_iconResource="@mipmap/ic_phone_icon"
+                    fancy:fb_focusColor="#5577bd"
+                    fancy:fb_defaultColor="#b5e4d5"/>
+
+                <mehdi.sakout.fancybuttons.FancyButton
+                    android:layout_width="110dp"
+                    android:layout_height="50dp"
+                    android:id="@+id/ad_preview_message_btn"
+                    fancy:fb_text="Chat"
+                    fancy:fb_textColor="#000000"
+                    fancy:fb_radius="10dp"
+                    fancy:fb_iconResource="@mipmap/ic_chat_icon"
+                    fancy:fb_focusColor="#5577bd"
+                    fancy:fb_defaultColor="#b5e4d5"/>
+            </LinearLayout>
+
+
+    </LinearLayout>
+    </ScrollView>
+
+</RelativeLayout>
