--- a/app/src/main/res/layout/item_post_view_pager.xml
+++ b/app/src/main/res/layout/item_post_view_pager.xml
@@ -52,21 +52,26 @@
                             android:textColor="#000000"
                             android:text="15000"/>
 
-                        <TextView
+                        <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="14sp"
-                            android:text="Kolkata"
                             android:layout_alignParentEnd="true"
-                            android:id="@+id/item_post_vp_location"/>
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:textSize="14sp"
-                            android:layout_below="@+id/item_post_vp_location"
-                            android:id="@+id/item_post_vp_date"
-                            android:layout_alignParentEnd="true"
-                            android:text="Sept 28"/>
+                            android:layout_alignParentBottom="true"
+                            android:orientation="vertical">
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="12sp"
+                                android:text="Kolkata"
+                                android:id="@+id/item_post_vp_location"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textSize="12sp"
+                                android:id="@+id/item_post_vp_date"/>
+                        </LinearLayout>
+
+
 
                     </RelativeLayout>
 
