--- a/app/src/main/res/layout/activity_ad_preview.xml
+++ b/app/src/main/res/layout/activity_ad_preview.xml
@@ -7,6 +7,14 @@
     xmlns:fancy="http://schemas.android.com/apk/res-auto"
     tools:context="com.sapicons.deepak.k2psap.Activities.AdPreviewActivity">
 
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_star_border_black_24dp"
+        android:id="@+id/ad_preview_set_rem_fav_fab"/>
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
