--- a/app/src/main/res/layout/item_ad_post.xml
+++ b/app/src/main/res/layout/item_ad_post.xml
@@ -87,6 +87,14 @@
                         android:textColor="#000000"
                         android:text="15000"/>
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:id="@+id/item_ad_post_distance_tv"
+                        android:layout_below="@+id/item_ad_post_price_tv"
+                        android:layout_alignParentEnd="true"/>
+
                 </RelativeLayout>
 
             </LinearLayout>
