--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -7,8 +7,9 @@
 
         <android.support.v4.view.ViewPager
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_margin="16dp"
+            android:layout_height="130dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:id="@+id/frag_explore_vp"/>
         
         <LinearLayout
