--- a/app/src/main/res/layout/item_post_view_pager.xml
+++ b/app/src/main/res/layout/item_post_view_pager.xml
@@ -2,25 +2,28 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="130dp"
+    android:layout_margin="4dp"
     android:orientation="horizontal">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp">
+        android:layout_height="match_parent"
+        android:elevation="4dp">
 
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="8dp">
+                android:layout_height="match_parent"
+                android:layout_marginTop="4dp"
+                android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:layout_marginLeft="8dp"
                     android:layout_marginRight="16dp"
+                    android:layout_gravity="center_vertical"
                     android:scaleType="centerCrop"
                     android:id="@+id/item_post_vp_imageview"/>
 
@@ -57,6 +60,7 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             android:layout_alignParentBottom="true"
+                            android:layout_margin="8dp"
                             android:orientation="vertical">
                             <TextView
                                 android:layout_width="wrap_content"
