--- a/app/src/main/res/layout/item_ad_post.xml
+++ b/app/src/main/res/layout/item_ad_post.xml
@@ -91,8 +91,17 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="12sp"
-                        android:id="@+id/item_ad_post_distance_tv"
+                        android:id="@+id/item_ad_post_day_tv"
                         android:layout_below="@+id/item_ad_post_price_tv"
+                        android:layout_alignParentEnd="true"
+                        android:textColor="@color/green800"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="4dp"
+                        android:textSize="12sp"
+                        android:id="@+id/item_ad_post_distance_tv"
+                        android:layout_below="@+id/item_ad_post_day_tv"
                         android:layout_alignParentEnd="true"/>
 
                 </RelativeLayout>
