--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -4,9 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.sapicons.deepak.k2psap.Activities.NavigationActivity"
     tools:showIn="@layout/app_bar_navigation">
+
+    <mehdi.sakout.fancybuttons.FancyButton
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_centerInParent="true"
+        android:id="@+id/content_nav_request_permission_btn"
+        fancy:fb_text="Grant Permissions"
+        fancy:fb_textColor="@color/black"
+        fancy:fb_radius="4dp"
+        fancy:fb_focusColor="@color/indigo400"
+        fancy:fb_defaultColor="@color/teal100"/>
 
     <FrameLayout
         android:id="@+id/navigation_activity_content_frame"
