--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -10,7 +10,8 @@
             android:layout_height="130dp"
             android:layout_marginLeft="4dp"
             android:layout_marginRight="4dp"
-            android:id="@+id/frag_explore_vp"/>
+            android:id="@+id/frag_explore_vp"
+            android:visibility="gone"/>
         
         <LinearLayout
             android:layout_width="match_parent"
