autohide filter categories in explore frag on scroll down and show when scrolling up

--- a/app/src/main/res/layout/activity_ad_preview.xml
+++ b/app/src/main/res/layout/activity_ad_preview.xml
@@ -104,7 +104,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20sp"
-                        android:textColor="#0d47a1"
+                        android:textColor="@color/blue"
                         android:text="INR 49,000 "/>
                     <TextView
                         android:id="@+id/ad_preview_title_tv"
