--- a/app/src/main/res/layout/item_ad.xml
+++ b/app/src/main/res/layout/item_ad.xml
@@ -56,7 +56,7 @@
                         android:layout_height="wrap_content"
                         android:textSize="16dp"
                         android:textStyle="bold"
-                        android:textColor="@color/black"
+                        android:textColor="@color/blue"
                         android:text="6000"/>
 
                 </LinearLayout>
