--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="indigo400">#5c6bc0</color>
     <color name="white">#ffffff</color>
     <color name="teal100">#b2dfdb</color>
+    <color name="blue">#0d47a1</color>
 </resources>
