--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -27,7 +27,9 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:id="@+id/frag_explore_select_location_rl"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true">
 
                         <ImageView
                             android:layout_width="30dp"
@@ -62,12 +64,15 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:id="@+id/frag_explore_select_category_rl"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent"
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true">
 
                         <ImageView
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:layout_marginRight="8dp"
+                            android:layout_centerVertical="true"
                             android:layout_toLeftOf="@+id/frag_explore_category_selected_tv"
                             android:src="@mipmap/ic_list_black"
                             android:id="@+id/frag_explore_select_category_icon"/>
