--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -11,6 +11,11 @@
             android:title="Your Posts" />
 
         <item
+            android:id="@+id/nav_profile_view"
+            android:icon="@mipmap/ic_profile_view_black"
+            android:title="Profile" />
+
+        <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_manage"
             android:title="Settings" />
