--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <color name="white">#ffffff</color>
     <color name="teal100">#b2dfdb</color>
     <color name="blue">#0d47a1</color>
+    <color name="color_instruction_red">#c60009</color>
+    <color name="color_graylight">#fafafa</color>
+    <color name="color_starblue">#09c6df</color>
+    <color name="color_endblue">#0bcce6</color>
 </resources>
