--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -16,7 +16,8 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp">
+                android:layout_height="200dp"
+                android:visibility="visible">
 
                 <android.support.v4.view.ViewPager
                     android:layout_width="match_parent"
@@ -138,10 +139,19 @@
                     </android.support.design.widget.TextInputLayout>
 
 
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="Select Category"
+                        android:textSize="14sp"/>
+
                     <Spinner
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
+                        android:paddingTop="8dp"
+                        android:paddingBottom="8dp"
+                        android:background="@drawable/white_bg_black_border"
                         android:layout_marginBottom="16dp"
                         android:id="@+id/post_category_spinner" />
 
@@ -149,8 +159,60 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Share Phone Number "
+                        android:textSize="14sp"
                         android:id="@+id/post_share_phone_switch"/>
 
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="4dp"
+                        android:layout_marginBottom="4dp"
+                        android:paddingTop="8dp"
+                        android:paddingLeft="4dp"
+                        android:paddingRight="4dp"
+                        android:paddingBottom="4dp"
+                        android:background="@drawable/white_bg_black_border">
+
+                        <RelativeLayout
+                            android:id="@+id/frag_post_select_location_rl"
+                            android:layout_width="0dp"
+                            android:layout_weight="1"
+                            android:layout_height="wrap_content"
+                            android:background="?attr/selectableItemBackground"
+                            android:clickable="true">
+
+                            <ImageView
+                                android:layout_width="30dp"
+                                android:layout_height="30dp"
+                                android:layout_marginRight="8dp"
+                                android:layout_centerVertical="true"
+                                android:src="@mipmap/ic_send_location"
+                                android:id="@+id/frag_explore_location_icon"/>
+                            <TextView
+                                android:id="@+id/frag_explore_change_location_tv"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_toRightOf="@id/frag_explore_location_icon"
+                                android:text="Change"
+                                android:textSize="10sp"
+                                android:textColor="@color/blue"/>
+                            <TextView
+                                android:id="@+id/frag_post_address_tv"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_below="@id/frag_explore_change_location_tv"
+                                android:layout_toRightOf="@id/frag_explore_location_icon"
+                                android:textColor="@color/black"
+                                android:lines="2"
+                                android:textSize="14sp"/>
+
+                        </RelativeLayout>
+
+
+
+                    </LinearLayout>
 
                 </LinearLayout>
             </android.support.v7.widget.CardView>
@@ -166,7 +228,8 @@
                 android:id="@+id/post_select_location_btn"
                 fancy:fb_text= "Choose Location"
                 fancy:fb_focusColor="@color/indigo400"
-                fancy:fb_defaultColor="@color/green800">
+                fancy:fb_defaultColor="@color/green800"
+                android:visibility="gone">
 
             </mehdi.sakout.fancybuttons.FancyButton>
 
@@ -178,7 +241,8 @@
                 android:layout_height="300dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginBottom="16dp"/>
+                android:layout_marginBottom="16dp"
+                android:visibility="gone"/>
 
         </LinearLayout>
     </ScrollView>
