--- a/app/src/main/res/layout/bottom_sheet_for_ad_preview.xml
+++ b/app/src/main/res/layout/bottom_sheet_for_ad_preview.xml
@@ -216,6 +216,16 @@
                         fancy:fb_defaultColor="@color/teal100"/>
                 </RelativeLayout>
 
+                <TextView
+                    android:id="@+id/ad_preview_closed_ad_instruction_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="Oops! This ad was closed!"
+                    android:textStyle="bold"
+                    android:textColor="@color/color_instruction_red"
+                    android:visibility="gone"/>
+
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
