--- a/app/src/main/res/layout/fragment_closed_ads.xml
+++ b/app/src/main/res/layout/fragment_closed_ads.xml
@@ -8,4 +8,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/frag_closed_ads_listview"/>
+
+    <LinearLayout
+        android:id="@+id/frag_closed_ads_empty_listview_ll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_centerInParent="true"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:src="@drawable/empty_box"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:lines="2"
+            android:textSize="16sp"
+            android:text="No ads closed."/>
+
+    </LinearLayout>
 </RelativeLayout>
