--- a/app/src/main/res/layout/fragment_favorites.xml
+++ b/app/src/main/res/layout/fragment_favorites.xml
@@ -8,4 +8,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/frag_fav_listview"/>
+
+    <LinearLayout
+        android:id="@+id/frag_fav_empty_listview_ll"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_centerInParent="true"
+        android:visibility="gone">
+
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_gravity="center"
+            android:src="@drawable/broken_heart"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:lines="2"
+            android:textSize="16sp"
+            android:text="No Favorites Added."/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:lines="2"
+            android:text="Please add some favorites!"/>
+    </LinearLayout>
 </RelativeLayout>
