--- a/app/src/main/res/layout/item_ad_grid.xml
+++ b/app/src/main/res/layout/item_ad_grid.xml
@@ -17,13 +17,46 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
-
-                android:id="@+id/item_grid_ad_image_view"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/open_book"/>
+                android:layout_height="150dp">
+                <ImageView
+
+                    android:id="@+id/item_grid_ad_image_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/open_book"/>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@drawable/black_gradient">
+
+                    <ImageButton
+                        android:id="@+id/item_ad_grid_favorite_iv"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginRight="8dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:background="@mipmap/ic_favorites_border_white"/>
+
+                    <ImageButton
+                        android:id="@+id/item_ad_grid_unfavorite_iv"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginRight="8dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:visibility="gone"
+                        android:background="@mipmap/ic_favorites_white"/>
+
+                </RelativeLayout>
+            </RelativeLayout>
+
+
 
             <TextView
                 android:id="@+id/item_grid_ad_price_tv"
