--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -58,8 +58,8 @@
                         android:layout_weight="1"
                         android:id="@+id/item_chat_post_price"
                         android:textAlignment="textEnd"
-                        android:textSize="18sp"
-                        android:textColor="#000000"
+                        android:textSize="14sp"
+                        android:textColor="@color/blue"
                         android:layout_marginTop="4dp"/>
                 </LinearLayout>
 
