--- a/app/src/main/res/layout/item_photo_preview_view_pager.xml
+++ b/app/src/main/res/layout/item_photo_preview_view_pager.xml
@@ -24,7 +24,7 @@
             android:layout_height="match_parent"
             android:src="@drawable/side_nav_bar"
             android:scaleType="centerCrop"
-            app:zoomage_restrictBounds="false"
+            app:zoomage_restrictBounds="true"
             app:zoomage_animateOnReset="true"
             app:zoomage_autoResetMode="UNDER"
             app:zoomage_autoCenter="true"
