--- a/app/src/main/res/layout/bottom_sheet_for_ad_preview.xml
+++ b/app/src/main/res/layout/bottom_sheet_for_ad_preview.xml
@@ -116,8 +116,10 @@
                     </RelativeLayout>
 
                     <RelativeLayout
+                        android:id="@+id/bottom_sheet_location_address_rl"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
+                        android:layout_height="wrap_content"
+                        android:background="?attr/selectableItemBackground">
 
                         <de.hdodenhof.circleimageview.CircleImageView
                             android:id="@+id/ad_preview_location_iv"
@@ -176,35 +178,67 @@
 
 
                 <LinearLayout
+                    android:id="@+id/ad_preview_contact_ll"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:id="@+id/ad_preview_contact_ll"
-                    android:layout_margin="16dp"
+                    android:orientation="vertical"
                     android:visibility="gone">
 
-                    <mehdi.sakout.fancybuttons.FancyButton
-                        android:layout_width="150dp"
-                        android:layout_height="50dp"
-                        android:layout_marginRight="32dp"
-                        android:id="@+id/ad_preview_call_btn"
-                        fancy:fb_text="Call"
-                        fancy:fb_iconResource="@mipmap/ic_phone_white"
-                        fancy:fb_textColor="@color/white"
-                        fancy:fb_radius="1dp"
-                        fancy:fb_focusColor="#e0e0e0"
-                        fancy:fb_defaultColor="#00695c"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:text="Contact"
+                        android:textSize="16sp"
+                        android:textColor="@color/color_instruction_red"/>
 
-                    <mehdi.sakout.fancybuttons.FancyButton
-                        android:layout_width="150dp"
-                        android:layout_height="50dp"
-                        android:id="@+id/ad_preview_message_btn"
-                        fancy:fb_text="Chat"
-                        fancy:fb_iconResource="@mipmap/ic_chat_white"
-                        fancy:fb_radius="1dp"
-                        fancy:fb_focusColor="#e0e0e0"
-                        fancy:fb_defaultColor="#00695c"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_margin="16dp">
+
+                        <!--<mehdi.sakout.fancybuttons.FancyButton
+                            android:layout_width="150dp"
+                            android:layout_height="50dp"
+                            android:layout_marginRight="32dp"
+                            android:id="@+id/ad_preview_call_btn"
+                            fancy:fb_text="Call"
+                            fancy:fb_iconResource="@mipmap/ic_phone_white"
+                            fancy:fb_textColor="@color/white"
+                            fancy:fb_radius="1dp"
+                            fancy:fb_focusColor="#e0e0e0"
+                            fancy:fb_defaultColor="#00695c"/>
+
+                        <mehdi.sakout.fancybuttons.FancyButton
+                            android:layout_width="150dp"
+                            android:layout_height="50dp"
+                            android:id="@+id/ad_preview_message_btn"
+                            fancy:fb_text="Chat"
+                            fancy:fb_iconResource="@mipmap/ic_chat_white"
+                            fancy:fb_radius="1dp"
+                            fancy:fb_focusColor="#e0e0e0"
+                            fancy:fb_defaultColor="#00695c"/>-->
+                        <at.markushi.ui.CircleButton
+                            android:id="@+id/ad_preview_call_btn"
+                            android:layout_width="64dip"
+                            android:layout_height="64dip"
+                            android:layout_marginRight="16dp"
+                            android:src="@drawable/call_btn"
+                            app:cb_color="#99CC00"
+                            app:cb_pressedRingWidth="8dip" />
+
+                        <at.markushi.ui.CircleButton
+                            android:id="@+id/ad_preview_message_btn"
+                            android:layout_width="64dip"
+                            android:layout_height="64dip"
+                            android:src="@drawable/chat_btn"
+                            app:cb_color="#99CC00"
+                            app:cb_pressedRingWidth="8dip" />
+                    </LinearLayout>
                 </LinearLayout>
+
+
 
                 <RelativeLayout
                     android:layout_width="match_parent"
