--- a/app/src/main/res/layout/fragment_explore.xml
+++ b/app/src/main/res/layout/fragment_explore.xml
@@ -94,29 +94,33 @@
                 </RelativeLayout>
             
         </LinearLayout>
+        <ListView
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/frag_explore_ads_list_view"/>
 
-        <RelativeLayout
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/frag_explore_swipe_refresh_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-                <ListView
-                    android:visibility="gone"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/frag_explore_ads_list_view"/>
 
 
-                <GridView xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:id="@+id/frag_explore_gridview"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:columnWidth="90dp"
-                    android:numColumns="2"
-                    android:verticalSpacing="10dp"
-                    android:horizontalSpacing="10dp"
-                    android:stretchMode="columnWidth"
-                    android:gravity="center"
-                    android:visibility="visible"/>
-        </RelativeLayout>
+                        <GridView xmlns:android="http://schemas.android.com/apk/res/android"
+                            android:id="@+id/frag_explore_gridview"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:columnWidth="90dp"
+                            android:numColumns="2"
+                            android:verticalSpacing="10dp"
+                            android:horizontalSpacing="10dp"
+                            android:stretchMode="columnWidth"
+                            android:gravity="center"
+                            android:visibility="visible"/>
+
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+
 
 
 
