--- a/app/src/main/res/menu/activity_navigation_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer.xml
@@ -15,26 +15,28 @@
             android:icon="@mipmap/ic_profile_view_black"
             android:title="Profile" />
 
-        <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Settings" />
     </group>
 
     <item android:title="Communicate">
         <menu>
             <item
+                android:id="@+id/nav_settings"
+                android:icon="@drawable/ic_menu_manage"
+                android:title="Settings" />
+            <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
                 android:title="Share" />
             <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:id="@+id/nav_rate_us"
+                android:icon="@drawable/ic_favorite_black_24dp"
+                android:title="Rate Us" />
+
         </menu>
     </item>
 
     <group android:checkableBehavior="single">
+
 
         <item
             android:id="@+id/nav_log_out"
