--- a/app/src/main/res/menu/menu_refresh.xml
+++ b/app/src/main/res/menu/menu_refresh.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_search"
-        android:orderInCategory="1"
+        android:id="@+id/action_refresh"
+        android:orderInCategory="2"
         app:showAsAction="always"
-        app:actionViewClass="android.widget.SearchView"
-        android:title="Search"
-        android:icon="@mipmap/ic_search_white"/>
+        android:title="Refresh"
+        android:icon="@mipmap/ic_refresh"/>
 
 </menu>
