--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="16dp"
-        tools:context="com.sapicons.deepak.k2psap.Activities.MapsActivity"/>
+        tools:context="com.bxtore.dev.bxt.Activities.MapsActivity"/>
 
 
 
