--- a/app/src/main/res/layout/activity_posted_ads.xml
+++ b/app/src/main/res/layout/activity_posted_ads.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sapicons.deepak.k2psap.Activities.PostedAdsActivity">
+    tools:context="com.bxtore.dev.bxt.Activities.PostedAdsActivity">
 
     <android.support.design.widget.TabLayout
         android:id="@+id/posted_ads_tbl_pages"
