--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     xmlns:fancy="http://schemas.android.com/apk/res-auto"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.sapicons.deepak.k2psap.Activities.NavigationActivity"
+    tools:context="com.bxtore.dev.bxt.Activities.NavigationActivity"
     tools:showIn="@layout/app_bar_navigation">
 
     <mehdi.sakout.fancybuttons.FancyButton
