--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:fancy="http://schemas.android.com/apk/res-auto"
-    tools:context="com.sapicons.deepak.k2psap.Fragments.PostFragment">
+    tools:context="com.bxtore.dev.bxt.Fragments.PostFragment">
 
 
     <ScrollView
