--- a/app/src/main/res/menu/menu_user_profile_preview.xml
+++ b/app/src/main/res/menu/menu_user_profile_preview.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.sapicons.deepak.k2psap.Activities.UserProfilePreview">
+    tools:context="com.bxtore.dev.bxt.Activities.UserProfilePreview">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
